# toggl-git-python-utility

./: .gitignore  LICENSE  README.MD  pyproject.toml
src/: __main__.py  config_func.py  main.py
tests/: main_testing.py
toggl_git_python_utility/: __main__.py  config_func.py  util.py
