[tool.poetry]
name = "Python, Git & Toggl Tracker Utility"
version = "0.1.1"
description = "Python, Git & Toggl Tracker Utility"
authors = ["David Kasakaitis <davidkasakaitis@proton.me>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
maskpass = "^0.3.7"
pytest = "^7.4.3"
flake8 = "^6.1.0"
mypy = "^1.7.0"
poetry = "^1.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
flake8 = "^6.1.0"
mypy = "^1.7.0"
